--- a/mockrest-client/.jshintrc
+++ b/mockrest-client/.jshintrc
@@ -1,17 +1,37 @@
 {
   "esnext": true,
+  "globalstrict": true,
   "bitwise": true,
+  "camelcase": false,
   "curly": true,
   "eqeqeq": true,
-  "latedef": false,
+  "immed": true,
+  "indent": 2,
+  "latedef": true,
+  "newcap": true,
   "noarg": true,
+  "quotmark": "single",
+  "regexp": true,
   "undef": true,
   "unused": true,
+  "strict": true,
+  "trailing": true,
+  "smarttabs": true,
+  "white": true,
   "validthis": true,
-  "jasmine": true,
+  "browser": true,
   "globals": {
     "angular": false,
+    // Angular Mocks
     "inject": false,
-    "module": false
+    "module": false,
+    // JASMINE
+    "describe": false,
+    "it": false,
+    "before": false,
+    "beforeEach": false,
+    "after": false,
+    "afterEach": false,
+    "expect": false
   }
 }
