--- a/mockrest-server/src/main/resources/application.yml
+++ b/mockrest-server/src/main/resources/application.yml
@@ -28,7 +28,7 @@ liquibase:
 authentication:
     oauth:
         clientId: mockrestserver
-        secret: ezquizsupersecret
+        secret: mockrestsupersecret
         tokenValidityInSeconds: 1800
 ---
 spring:
