--- a/mockrest-client/bower.json
+++ b/mockrest-client/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "jquery": "~2.1.4",
     "angular": "~1.4.0",
+    "angular-animate": "~1.4.0",
     "angular-ui-router": "~0.2.15",
     "angular-material": "~0.10.0",
     "angular-local-storage": "~0.2.2",
