--- a/mockrest-client/bower.json
+++ b/mockrest-client/bower.json
@@ -9,7 +9,8 @@
     "angular-material": "~0.10.0",
     "angular-local-storage": "~0.2.2",
     "restangular": "~1.5.1",
-    "moment": "~2.10.3"
+    "moment": "~2.10.3",
+    "toastr": "~2.1.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
