--- a/mockrest-client/package.json
+++ b/mockrest-client/package.json
@@ -30,8 +30,7 @@
     "gulp-protractor": "~1.0.0",
     "gulp-sourcemaps": "~1.5.2",
     "gulp-sass": "~2.0.1",
-    "gulp-webpack": "~1.5.0",
-    "jshint-loader": "~0.8.3",
+    "gulp-angular-filesort": "~1.1.1",
     "main-bower-files": "~2.8.0",
     "merge-stream": "~0.1.7",
     "jshint-stylish": "~2.0.0",
@@ -39,6 +38,7 @@
     "karma": "~0.12.36",
     "karma-jasmine": "~0.3.5",
     "karma-phantomjs-launcher": "~0.2.0",
+    "karma-angular-filesort": "~0.1.0",
     "karma-ng-html2js-preprocessor": "~0.1.2",
     "concat-stream": "~1.5.0",
     "require-dir": "~0.3.0",
