--- a/mockrest-server/pom.xml
+++ b/mockrest-server/pom.xml
@@ -36,6 +36,7 @@
         <javassist.version>3.18.2-GA</javassist.version>
         <testng.version>6.9.4</testng.version>
         <assertj.version>3.1.0</assertj.version>
+        <dbsetup.version>1.6.0</dbsetup.version>
         <swagger-springmvc.version>1.0.2</swagger-springmvc.version>
         <metrics-spring.version>3.1.0</metrics-spring.version>
     </properties>
@@ -228,6 +229,12 @@
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>${assertj.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.ninja-squad</groupId>
+            <artifactId>DbSetup</artifactId>
+            <version>${dbsetup.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
